[package]
name = "btcwsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
url = "2.2"
dotenv = "0.15"
futures-util = "0.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.27.0", features = ["bundled"] }
urlencoding = "1.0.1"
lazy_static = "1.4.0"
